--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=pet-api-test
 
 
-test.api.base-url=http://localhost:3000/api/pet
+test.api.base-url=http://localhost:3000/api
+test.api.base-path=/pet
 test.api.max-Pet-Category-Length=50
