--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.application.name=pet-api-test
 test.api.base-url=http://localhost:3000/api
 test.api.base-path=/pet
 test.api.max-Pet-Category-Length=50
+
+test.api.mock-host=localhost
+test.api.mock-port=8080
